--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,19 @@ authors = [
 ]
 requires-python = "==3.13.*"
 dependencies = [
+    "darts>=0.35.0",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.1",
     "numpy>=2.2.4",
     "pandas>=2.2.3",
+    "plotly>=6.0.1",
     "polars>=1.27.1",
+    "prophet>=1.1.6",
     "pyarrow>=19.0.1",
     "requests>=2.32.3",
     "scikit-learn>=1.6.1",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.4",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
